fixes item spacing for infuse for consistency

--- a/src/app/infuse/InfusionFinder.scss
+++ b/src/app/infuse/InfusionFinder.scss
@@ -8,10 +8,6 @@
   max-width: 800px;
   margin: 0 auto;
 
-  @include phone-portrait {
-    --item-margin: 6px;
-  }
-
   .infuseHeader {
     .item {
       margin-bottom: 0;
